Fixed column gap styling for table view

--- a/client/src/components/Table/TableTeamPosition.css
+++ b/client/src/components/Table/TableTeamPosition.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1rem 18rem repeat(6, 1.5rem);
     column-gap: 1rem;
+    justify-items: center;
     padding-top: .5rem;
     border-top: 1px solid var(--border-color);
 }
@@ -30,6 +31,6 @@
 @media (max-width: 840px) {
     .tableTeamPosition {
         grid-template-columns: 1rem 1fr repeat(6, 1.5rem);
-        column-gap: .4rem;
+        column-gap: .2rem;
     }
 }
