--- a/client/src/pages/Table.css
+++ b/client/src/pages/Table.css
@@ -24,8 +24,9 @@
 
 .tableHeader {
     display: grid;
-    grid-template-columns: 1rem 1fr repeat(6, 1.5rem);
+    grid-template-columns: 1rem 18rem repeat(6, 1.5rem);
     column-gap: 1rem;
+    justify-items: center;
     padding-bottom: .5rem;
 }
 
@@ -48,6 +49,6 @@
 @media (max-width: 840px) {
     .tableHeader {
         grid-template-columns: 1rem 1fr repeat(6, 1.5rem);
-        column-gap: .4rem;
+        column-gap: .2rem;
     }
 }
